--- a/package.json
+++ b/package.json
@@ -1,32 +1,32 @@
 {
-  "name": "elf-cli",
-  "version": "1.9.1",
+  "name": "spinoza-elf-cli",
+  "version": "1.0.0",
   "description": "HTML5 boilerplate and build tool",
   "scripts": {
     "commit": "git-cz"
   },
   "bin": {
-    "elf": "./bin/elf.js"
+    "spinoza-elf": "./bin/elf.js"
   },
   "engines": {
     "node": ">=6"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/o2team/elf.git"
+    "url": "https://github.com/hopcraft/elf.git"
   },
   "bugs": {
-    "url": "https://github.com/o2team/elf/issues"
+    "url": "https://github.com/hopcraft/elf/issues"
   },
   "keywords": [
-    "elf",
+    "spinoza-elf",
     "cli",
     "HTML5",
     "boilerplate",
     "build",
     "tool"
   ],
-  "author": "o2team",
+  "author": "hopcraft",
   "dependencies": {
     "archiver": "2.0.0",
     "autoprefixer": "7.1.2",
